--- a/content/w11_hw.stl.html
+++ b/content/w11_hw.stl.html
@@ -145,13 +145,15 @@ img.add_border {
 <p></p>
 <script src="./../cmsimde/static/jsc3d.js" type="text/javascript"></script>
 <!-- 模型連結 -->
-<div id="modelLinks1" style="display: none;"><a href="https://s104.cycu.org/~41223149/41223149_1_03.stl">模型1</a> <!-- 第一題的模型 --></div>
+<div id="modelLinks1" style="display: none;"><a href="https://s104.cycu.org/~41223149/41223149_1_03.stl">模型1</a> <!-- 第一題的模型 --> <a href="https://s104.cycu.org/~41223149/41223149_1_04.stl">模型2</a> <!-- 第二題的模型 --></div>
 <!-- 動態生成的模型部分 -->
-<div id="modelParts1"></div>
+<div id="modelParts1" style="display: flex; flex-wrap: wrap; justify-content: flex-start; gap: 20px;"></div>
 <script type="text/javascript">
 // 函數用來動態生成模型部件
 function createModelPart(index, url) {
     var modelPartDiv = document.createElement('div');
+    modelPartDiv.style = "width: 48%;"; // 左右排列
+
     modelPartDiv.innerHTML = `
         <div id="models${index}">
             <canvas height="300" id="cv${index}" style="border: 1px solid;" width="400"></canvas>
@@ -159,8 +161,8 @@ function createModelPart(index, url) {
 
         <div style="width: 400px; height: 70px; border: 1px solid; margin-bottom: 20px;">
             Model Color:<input id="mdlClr${index}" onchange="changeOption${index}('ModelColor',this.value)" style="margin-right: 50px;" type="color" value="#00ff40">
-            Back Color1:<input id="bckClr${index}_1" onchange="changeOption${index}('BackgroundColor1',this.value)" style="margin-right: 50px;" type="color">
-            Back Color2:<input id="bckClr${index}_2" onchange="changeOption${index}('BackgroundColor2',this.value)" type="color"><br>
+            Back Color1:<input id="bckClr${index}_1" onchange="changeOption${index}('BackgroundColor1',this.value)" style="margin-right: 50px;" type="color" value="#000000">
+            Back Color2:<input id="bckClr${index}_2" onchange="changeOption${index}('BackgroundColor2',this.value)" type="color" value="#000000"><br>
             Render Mode:<select id="render${index}" onchange="changeOption${index}('RenderMode',this.value)">
                 <option>Flat</option>
                 <option>Point</option>
@@ -223,7 +225,6 @@ function createModelPart(index, url) {
 
 function initModelParts() {
     var links = document.querySelectorAll('#modelLinks1 a');
-    
     links.forEach(function(link, index) {
         createModelPart(index + 1, link.href); // 初始化模型
     });
