--- a/content/W3.html
+++ b/content/W3.html
@@ -2,7 +2,7 @@
         <head>
         <title>cad_hw</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/css/bootstrap.min.css">
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Attendance.html'>Attendance</a><ul class='dropdown'><li><a href='W1.html'>W1</a><li><a href='W2.html'>W2</a><li><a href='w3.html'>w3</a><li><a href='w7-1.html'>w7-1</a></li></ul><li class='has-children'><a href='w7-2.html'>w7-2</a><ul class='dropdown'><li><a href='w7.stl.html'>w7.stl</a></li></ul><li class='has-children'><a href='w11_hw.html'>w11_hw</a><ul class='dropdown'><li><a href='w11_hw.stl.html'>w11_hw.stl</a></li></ul><li><a href='w12_ch.html'>w12_ch</a><li><a href='HW1_Exam.html'>HW1_Exam</a><li><a href='HW1.html'>HW1</a><li class='has-children'><a href='HW2.html'>HW2</a><ul class='dropdown'><li><a href='HW2_Exam.html'>HW2_Exam</a></li></ul><li class='has-children'><a href='HW3.html'>HW3</a><ul class='dropdown'><li><a href='HW3_Exam.html'>HW3_Exam</a></li></ul><li class='has-children'><a href='HW4.html'>HW4</a><ul class='dropdown'><li><a href='HW4_Exam.html'>HW4_Exam</a></li></ul><li><a href='Final Report.html'>Final Report</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Attendance.html'>Attendance</a><ul class='dropdown'><li><a href='W1.html'>W1</a><li><a href='W2.html'>W2</a><li><a href='W3.html'>W3</a></li></ul><li class='has-children'><a href='w7.html'>w7</a><ul class='dropdown'><li><a href='w7.stl.html'>w7.stl</a></li></ul><li class='has-children'><a href='w11_hw.html'>w11_hw</a><ul class='dropdown'><li><a href='w11_hw.stl.html'>w11_hw.stl</a></li></ul><li><a href='w12_ch.html'>w12_ch</a><li><a href='HW1_Exam.html'>HW1_Exam</a><li><a href='HW1.html'>HW1</a><li class='has-children'><a href='HW2.html'>HW2</a><ul class='dropdown'><li><a href='HW2_Exam.html'>HW2_Exam</a></li></ul><li class='has-children'><a href='HW3.html'>HW3</a><ul class='dropdown'><li><a href='HW3_Exam.html'>HW3_Exam</a></li></ul><li class='has-children'><a href='HW4.html'>HW4</a><ul class='dropdown'><li><a href='HW4_Exam.html'>HW4_Exam</a></li></ul><li><a href='Final Report.html'>Final Report</a></li>
                       </ul>
                 </nav>
               </div>
@@ -141,11 +141,13 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w7-1 << <a href='w7-1.html'>Previous</a> <a href='w7.stl.html'>Next</a> >> w7.stl<br /><h1>w7-2</h1>
+    <div id="tipue_search_content">W2 << <a href='W2.html'>Previous</a> <a href='w7.html'>Next</a> >> w7<br /><h1>W3</h1>
+<p>1.填寫github帳號到excel上</p>
+<p>2.教solvespace畫圖</p>
+<p>3.分析solvespaces的功用和職場發展:</p>
+<p><span>SolveSpace 是一款開源的參數化3D CAD建模軟體，主要用於製作2D和3D的技術設計、工程建模及機械設計</span><span>SolveSpace 在業界的應用更多聚焦於 <strong>輕量化、快速設計、教育用途和製造準備</strong>。對於需要高端功能的大型企業， 可能不夠用，但對於初創團隊、個人設計師或教育領域來說，它是一個靈活且經濟實惠的解決方案。</span></p>
 <p></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/UVtAJqI7P2Q?si=XwMeuWr7C-lYyppJ" title="YouTube video player" width="560"></iframe></p>
-<p></p>
-<br />w7-1 << <a href='w7-1.html'>Previous</a> <a href='w7.stl.html'>Next</a> >> w7.stl</div>
+<br />W2 << <a href='W2.html'>Previous</a> <a href='w7.html'>Next</a> >> w7</div>
         
     <!-- footer -->
       <div class="container">
