--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -163,7 +163,7 @@ window.onload = initModelParts;  // 頁面加載時初始化所有模型
 <p><span>倆者繪圖簡述比較:</span></p>
 <p><span>    1.Solvespaces:可畫較簡易的3D圖形設計分析。<br/></span></p>
 <p>   <span> 2.</span>NX:可以畫出曲面和模擬加工的各種運用，並且廣泛運用在業界當中，與solidworks和inventer比較多了一些功能。</p>
-<br/><span>w</span><span>10</span>
+<br/><br/><span>w</span><span>10</span>
 <p><span><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" data-mce-fragment="1" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="//www.youtube.com/embed/w4YIWJ3AB0U?si=zPcFG3NOewwErCcA" title="YouTube video player" width="560"></iframe></span></p>
 <h2>w11_hw</h2>
 <p>其他組員作業連結<a href="https://mdecad2024.github.io/hw-Spirit0224/content/w11_hw.html">41223122</a>  <a href="https://mdecad2024.github.io/hw-joeisme1208/content/w11_hw.html">41223130</a></p>
@@ -263,7 +263,8 @@ function initModelParts() {
 }
 
 window.onload = initModelParts;  // 頁面加載時初始化所有模型
-</script><h2>w12_ch</h2>
+</script>
+<h2>w12_ch</h2>
 <p></p>
 <p>自行利用 Github commits 提交記錄評分.</p>
 <h1>HW1_Exam</h1>
