--- a/content/w10.html
+++ b/content/w10.html
@@ -141,28 +141,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W3 << <a href='W3.html'>Previous</a> <a href='w7.stl.html'>Next</a> >> w7.stl<br /><h1>w7</h1>
-<p><a href="https://mdecad2024.github.io/hw-otakuyoyo/content/w7.stl.html">零件檔</a></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/UVtAJqI7P2Q?si=XwMeuWr7C-lYyppJ" title="YouTube video player" width="560"></iframe></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/YN8J-XuxeVM?si=00Uw_FilixV5iiws" title="YouTube video player" width="560"></iframe></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/BlixSNVUfwk?si=aqVsdQrgZY4Vylnz" title="YouTube video player" width="560"></iframe></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/Y--Mha4_HX8?si=W5TGUt0FJPqQD2xX" title="YouTube video player" width="560"></iframe></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/9voFhRoo6Do?si=U2wQqoHEcQVMIOqs" title="YouTube video player" width="560"></iframe></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/J3yQWIT1syk?si=_vCvh7thzXb7Lkyy" title="YouTube video player" width="560"></iframe></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/PF150-pSBb0?si=wZ_mn7qZRU19cc38" title="YouTube video player" width="560"></iframe></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/hE2a_Yc8joQ?si=quflRo8qkbgcr61O" title="YouTube video player" width="560"></iframe></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/4B3UH8oL4Zc?si=CTj3tAPQpVF_rHRG" title="YouTube video player" width="560"></iframe></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/IcH4vOLKK9o?si=RNyW3KvJ7wYEFF_t" title="YouTube video player" width="560"></iframe></p>
-<p></p>
-<p>1.利用solvespaces畫圖完成後</p>
-<p>2.在<span>File</span><span> </span>中找到<span> Export Triangle Mesh</span></p>
-<p>3.存到公用下載中，並且改檔名XXX.stl</p>
-<p>4.存完後，開啟cmd檔案</p>
-<p>5.輸入如下</p>
-<p><img alt="" height="359" src="./../images/image (2).jpg" width="602"/></p>
-<p><span>6.若成功之後在新分頁輸入如下修改小部分即可開啟:</span></p>
-<p><span><a href="https://mde.tw/cad2024/cmsimde/static/viewstl.html?src=https://s104.cycu.org/~41223131/41223131_part2.stl">https://mde.tw/cad2024/cmsimde/static/viewstl.html?src=https://s104.cycu.org/~41223149/41223149_1_03.stl</a></span></p>
-<br />W3 << <a href='W3.html'>Previous</a> <a href='w7.stl.html'>Next</a> >> w7.stl</div>
+    <div id="tipue_search_content">w9 << <a href='w9.html'>Previous</a> <a href='w11_hw.html'>Next</a> >> w11_hw<br /><h1>w10</h1>
+<p><span><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" data-mce-fragment="1" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="//www.youtube.com/embed/w4YIWJ3AB0U?si=zPcFG3NOewwErCcA" title="YouTube video player" width="560"></iframe></span></p>
+<br />w9 << <a href='w9.html'>Previous</a> <a href='w11_hw.html'>Next</a> >> w11_hw</div>
         
     <!-- footer -->
       <div class="container">
