--- a/content/w9.html
+++ b/content/w9.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Attendance.html'>Attendance</a><ul class='dropdown'><li><a href='W1.html'>W1</a><li><a href='W2.html'>W2</a><li><a href='W3.html'>W3</a><li class='has-children'><a href='w7.html'>w7</a><ul class='dropdown'><li><a href='w7.stl.html'>w7.stl</a></li></ul><li><a href='w9.html'>w9</a><li class='has-children'><a href='w11_hw.html'>w11_hw</a><ul class='dropdown'><li><a href='w11_hw.stl.html'>w11_hw.stl</a></li></ul><li><a href='w12_ch.html'>w12_ch</a></li></ul><li><a href='HW1_Exam.html'>HW1_Exam</a><li><a href='HW1.html'>HW1</a><li class='has-children'><a href='HW2.html'>HW2</a><ul class='dropdown'><li><a href='HW2_Exam.html'>HW2_Exam</a></li></ul><li class='has-children'><a href='HW3.html'>HW3</a><ul class='dropdown'><li><a href='HW3_Exam.html'>HW3_Exam</a></li></ul><li class='has-children'><a href='HW4.html'>HW4</a><ul class='dropdown'><li><a href='HW4_Exam.html'>HW4_Exam</a></li></ul><li><a href='Final Report.html'>Final Report</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Attendance.html'>Attendance</a><ul class='dropdown'><li><a href='W1.html'>W1</a><li><a href='W2.html'>W2</a><li><a href='W3.html'>W3</a><li class='has-children'><a href='w7.html'>w7</a><ul class='dropdown'><li><a href='w7.stl.html'>w7.stl</a></li></ul><li><a href='w9.html'>w9</a><li><a href='w10.html'>w10</a><li class='has-children'><a href='w11_hw.html'>w11_hw</a><ul class='dropdown'><li><a href='w11_hw.stl.html'>w11_hw.stl</a></li></ul><li><a href='w12_ch.html'>w12_ch</a></li></ul><li><a href='HW1_Exam.html'>HW1_Exam</a><li><a href='HW1.html'>HW1</a><li class='has-children'><a href='HW2.html'>HW2</a><ul class='dropdown'><li><a href='HW2_Exam.html'>HW2_Exam</a></li></ul><li class='has-children'><a href='HW3.html'>HW3</a><ul class='dropdown'><li><a href='HW3_Exam.html'>HW3_Exam</a></li></ul><li class='has-children'><a href='HW4.html'>HW4</a><ul class='dropdown'><li><a href='HW4_Exam.html'>HW4_Exam</a></li></ul><li><a href='Final Report.html'>Final Report</a></li>
                       </ul>
                 </nav>
               </div>
@@ -141,7 +141,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w7.stl << <a href='w7.stl.html'>Previous</a> <a href='w11_hw.html'>Next</a> >> w11_hw<br /><h1>w9</h1>
+    <div id="tipue_search_content">w7.stl << <a href='w7.stl.html'>Previous</a> <a href='w10.html'>Next</a> >> w10<br /><h1>w9</h1>
 <p>1.自評期中成績</p>
 <p>2.分析NX的在職場上的發展與用處</p>
 <p>ChatGPT:</p>
@@ -154,9 +154,7 @@ img.add_border {
 <p><span>倆者繪圖簡述比較:</span></p>
 <p><span>    1.Solvespaces:可畫較簡易的3D圖形設計分析。<br/></span></p>
 <p>   <span> 2.</span>NX:可以畫出曲面和模擬加工的各種運用，並且廣泛運用在業界當中，與solidworks和inventer比較多了一些功能。</p>
-<br/><br/><span>w</span><span>10</span>
-<p><span><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" data-mce-fragment="1" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="//www.youtube.com/embed/w4YIWJ3AB0U?si=zPcFG3NOewwErCcA" title="YouTube video player" width="560"></iframe></span></p>
-<br />w7.stl << <a href='w7.stl.html'>Previous</a> <a href='w11_hw.html'>Next</a> >> w11_hw</div>
+<br />w7.stl << <a href='w7.stl.html'>Previous</a> <a href='w10.html'>Next</a> >> w10</div>
         
     <!-- footer -->
       <div class="container">
